# gsd-browser

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SKILL.md  install.sh
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/assets/: viewer-coordinate.test.mjs  viewer.html
cli/src/: daemon_client.rs  main.rs  output.rs
cli/src/daemon/: capture.rs  helpers.rs  input_dispatch.rs  inspection.rs  logs.rs  mod.rs  settle.rs  state.rs
cli/src/daemon/handlers/: advanced.rs  assert_cmd.rs  auth_vault.rs  batch.rs  cloud.rs  cloud_manifest.rs  cloud_methods.rs  codegen.rs  device.rs  extract.rs  forms.rs  har.rs  inspect.rs  intent.rs  interaction.rs  mod.rs  narration_cmds.rs  navigate.rs  network_mock.rs  pages.rs  pdf.rs  refs.rs  screenshot.rs  session.rs  state_persist.rs  timeline.rs  traces.rs  visual_diff.rs  wait.rs
cli/src/daemon/narration/: control.rs  events.rs  history.rs  mod.rs  policy.rs  probe.rs
cli/src/daemon/view/: annotations.rs  auth.rs  capture.rs  control.rs  http.rs  input.rs  mod.rs  page_state.rs  privacy.rs  recording.rs  refs_poller.rs  risk.rs  target_follow.rs  viewer_html.rs  ws.rs
cli/tests/: cloud_runtime.rs  cloud_session_contract.rs  daemon_recovery.rs  narration_integration.rs  session_contract.rs  session_health.rs
common/: Cargo.toml
common/src/: chrome.rs  cloud.rs  config.rs  identity.rs  ipc.rs  lib.rs  session.rs  types.rs  viewer.rs
common/tests/: cloud_input.rs  identity.rs
daemon/: Cargo.toml
daemon/src/: capture.rs  helpers.rs  logs.rs  main.rs  settle.rs  state.rs
daemon/src/handlers/: advanced.rs  assert_cmd.rs  auth_vault.rs  batch.rs  codegen.rs  device.rs  extract.rs  forms.rs  har.rs  inspect.rs  intent.rs  interaction.rs  mod.rs  navigate.rs  network_mock.rs  pages.rs  pdf.rs  refs.rs  session.rs  state_persist.rs  timeline.rs  traces.rs  visual_diff.rs  wait.rs
docs/adr/: 0001-daemon-owned-session-service.md  0002-unified-inspection-and-assertion-engine.md  README.md
docs/superpowers/plans/: 2026-05-02-interactive-browser-workbench.md
docs/superpowers/specs/: 2026-05-02-interactive-browser-workbench-design.md
gsd-browser-skill/: SKILL.md
gsd-browser-skill/references/: command-reference.md  configuration.md  error-recovery.md  semantic-intents.md  snapshot-and-refs.md
gsd-browser-skill/workflows/: debug-and-diagnose.md  live-viewer-and-narration.md  navigate-and-interact.md  scrape-and-extract.md  setup-and-configure.md  test-and-assert.md
npm/: .npmignore  package.json
npm/scripts/: postinstall.js
tests/: verify-s01.sh  verify-s02.sh  verify-s03.sh  verify-s04.sh  verify-s05.sh  verify-s06.sh
