[workspace]
members = ["common", "daemon", "cli"]
resolver = "2"

[workspace.dependencies]
chrono = "0.4"
dirs = "6"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
chromiumoxide = "0.9"
futures = "0.3"
nix = { version = "0.29", features = ["signal", "process", "fs"] }
which = "7"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
