[workspace]
members = ["common", "cli"]
resolver = "2"

[workspace.dependencies]
chrono = "0.4"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
chromiumoxide = "0.9"
futures = "0.3"
which = "7"
thiserror = "2"
tracing = "0.1"
toml = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = { version = "0.25", default-features = false, features = ["png"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
strip = true
