[package]
name = "gsd-browser"
version = "0.1.0"
edition = "2021"
description = "Browser automation CLI powered by Chrome DevTools Protocol"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anthropics/gsd-browser"
homepage = "https://github.com/anthropics/gsd-browser"
keywords = ["browser", "automation", "cdp", "chrome", "testing"]
categories = ["command-line-utilities", "development-tools::testing", "web-programming"]
readme = "../README.md"

[[bin]]
name = "gsd-browser"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
gsd-browser-common = { path = "../common" }
clap = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
which = { workspace = true }
