[package]
name = "gsd-browser"
version = "0.1.2"
edition = "2021"
description = "Browser automation CLI powered by Chrome DevTools Protocol"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gsd-build/gsd-browser"
homepage = "https://github.com/gsd-build/gsd-browser"
keywords = ["browser", "automation", "cdp", "chrome", "testing"]
categories = ["command-line-utilities", "development-tools::testing", "web-programming"]
readme = "../README.md"

[[bin]]
name = "gsd-browser"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
gsd-browser-common = { path = "../common" }
clap = { workspace = true }
chrono = { workspace = true }
chromiumoxide = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
image = { workspace = true }
regex-lite = "0.1"
aes-gcm = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }

[dependencies.fd-lock]
version = "4.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process", "fs"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Threading", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3"
