[package]
name = "gsd-browser"
version = "0.1.16"
edition = "2021"
description = "Browser automation CLI powered by Chrome DevTools Protocol"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gsd-build/gsd-browser"
homepage = "https://github.com/gsd-build/gsd-browser"
keywords = ["browser", "automation", "cdp", "chrome", "testing"]
categories = ["command-line-utilities", "development-tools::testing", "web-programming"]
readme = "../README.md"

[[bin]]
name = "gsd-browser"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
gsd-browser-common = { path = "../common" }
clap = { workspace = true }
chrono = { workspace = true }
chromiumoxide = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
nix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
image = { workspace = true }
regex-lite = "0.1"
aes-gcm = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
