[package]
name = "gsd-browser-common"
version = "0.1.7"
edition = "2021"
publish = false

[dependencies]
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }

[dev-dependencies]
tempfile = "3"
