[package]
name = "browser-tools-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
browser-tools-common = { path = "../common" }
chromiumoxide = { workspace = true }
futures = { workspace = true }
nix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
