[package]
name = "browser-tools-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
browser-tools-common = { path = "../common" }
chrono = { workspace = true }
chromiumoxide = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
nix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
image = { workspace = true }
regex-lite = "0.1"
aes-gcm = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
